// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button click event 1`] = `
<Button
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-button button ripple normal"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      className="icon"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      visible={true}
      width=""
    >
      <styled.i
        className="ui-icon fa fa-fw fa-bomb"
        sizing="normal"
        style={Object {}}
      >
        <i
          className="ui-icon fa fa-fw fa-bomb sc-bdVaJa ifzSmG"
          style={Object {}}
        />
      </styled.i>
    </Icon>
  </div>
</Button>
`;

exports[`Test creation of a Button control 1`] = `
<div
  className="ui-button button ripple normal test-class"
  onClick={[Function]}
  style={Object {}}
>
  <Icon
    className="icon"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    iconName="bomb"
    id=""
    imageFile=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    visible={true}
    width=""
  />
</div>
`;

exports[`Test creation of a Button control with custom icon, colors, and border 1`] = `
<div
  className="ui-button button ripple normal"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "black",
      "borderColor": "green",
      "borderWidth": "2px",
      "color": "red",
    }
  }
>
  <Icon
    className="icon"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    iconName="superpowers"
    id=""
    imageFile=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    visible={true}
    width=""
  />
</div>
`;

exports[`Test disabling of a Button 1`] = `
<Button
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={true}
  width=""
>
  <div
    className="ui-button button normal disabled nohover"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      className="icon"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      visible={true}
      width=""
    >
      <styled.i
        className="ui-icon fa fa-fw fa-bomb"
        sizing="normal"
        style={Object {}}
      >
        <i
          className="ui-icon fa fa-fw fa-bomb sc-bdVaJa ifzSmG"
          style={Object {}}
        />
      </styled.i>
    </Icon>
  </div>
</Button>
`;

exports[`Test making a Button invisible 1`] = `
<Button
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  visible={false}
  width=""
>
  <div
    className="ui-button button ripple normal invisible"
    onClick={[Function]}
    style={Object {}}
  >
    <Icon
      className="icon"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      id=""
      imageFile=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      visible={true}
      width=""
    >
      <styled.i
        className="ui-icon fa fa-fw fa-bomb"
        sizing="normal"
        style={Object {}}
      >
        <i
          className="ui-icon fa fa-fw fa-bomb sc-bdVaJa ifzSmG"
          style={Object {}}
        />
      </styled.i>
    </Icon>
  </div>
</Button>
`;

exports[`Test retrieval of Button props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "visible": true,
  "width": "",
}
`;
